--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,23 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {%- include head.html -%}
-
+<link rel="apple-touch-icon" sizes="57x57" href="{{ '/assets/favicons/apple-icon-57x57.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="60x60" href="{{ '/assets/favicons/apple-icon-60x60.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ '/assets/favicons/apple-icon-72x72.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="76x76" href="{{ '/assets/favicons/apple-icon-76x76.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ '/assets/favicons/apple-icon-114x114.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="120x120" href="{{ '/assets/favicons/apple-icon-120x120.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="144x144" href="{{ '/assets/favicons/apple-icon-144x144.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="152x152" href="{{ '/assets/favicons/apple-icon-152x152.png' | relative_url }}">
+<link rel="apple-touch-icon" sizes="180x180" href="{{ '/assets/favicons/apple-icon-180x180.png' | relative_url }}">
+<link rel="icon" type="image/png" sizes="192x192" href="{{ '/assets/favicons/android-icon-192x192.png' | relative_url }}">
+<link rel="icon" type="image/png" sizes="32x32" href="{{ '/assets/favicons/favicon-32x32.png' | relative_url }}">
+<link rel="icon" type="image/png" sizes="96x96" href="{{ '/assets/favicons/favicon-96x96.png' | relative_url }}">
+<link rel="icon" type="image/png" sizes="16x16" href="{{ '/assets/favicons/favicon-16x16.png' | relative_url }}">
+<link rel="manifest" href="{{ '/assets/favicons/manifest.json' | relative_url }}">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="{{ '/assets/favicons/ms-icon-144x144.png' | relative_url }}">
+<meta name="theme-color" content="#ffffff">
   <style>
     #sakana-widget {
       /* 確保元素固定在視窗上，不隨頁面內容滾動 */
