--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,8 +16,8 @@
     :root {
       --sidebar-width: 260px;
       --sidebar-bg: #1e1e1e;       /* 深色背景 */
-      --sidebar-text: #e0e0e0;     /* 淺灰文字 */
-      --sidebar-hover: #333333;    /* 滑鼠懸停顏色 */
+      --sidebar-text: #ffffff;     /* 淺灰文字 */
+      --sidebar-hover: #6e6e6e;    /* 滑鼠懸停顏色 */
       --content-bg: #ffffff;
       --transition-speed: 0.3s;
     }
